--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </header>
 
     <nav class="menu" id="menu">
-        <a href="">Page Maudite 1 🕸️</a>
+        <a href="horreur2.html">Page Maudite 1 🕸️</a>
         <a href="horreur.html">Page Maudite 2 🦇</a>
         <a href="#">Page Maudite 3 ☠️</a>
     </nav>
