--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <nav class="menu" id="menu">
         <a href="horreur2.html">Page Maudite 1 🕸️</a>
-        <a href="horreur.html">Page Maudite 2 🦇</a>
+        <a href="horreur1.html">Page Maudite 2 🦇</a>
         <a href="#">Page Maudite 3 ☠️</a>
     </nav>
 
