--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
             font-family: 'Creepster', cursive;
             color: #ff1a1a;
-            background: url('https://i.imgur.com/CqKsKyd.jpg') no-repeat center center fixed;
+            background: url("https://st3.depositphotos.com/1268628/15647/i/1600/depositphotos_156475284-stock-photo-3d-illustration-of-scary-ghost.jpg") no-repeat center center fixed;
             background-size: cover;
             overflow: hidden;
         }
