--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <nav class="menu" id="menu">
         <a href="horreur2.html">Page Maudite 1 🕸️</a>
         <a href="horreur1.html">Page Maudite 2 🦇</a>
-        <a href="#">Page Maudite 3 ☠️</a>
+        <a href="horreur3.html">Stories ☠️</a>
     </nav>
 
     <main>
