--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <a href="horreur2.html">Page Maudite 1 🕸️</a>
         <a href="horreur1.html">Page Maudite 2 🦇</a>
         <a href="horreur3.html">Stories ☠️</a>
+        <a href="forum.html">Forum ☠️</a> 
     </nav>
 
     <main>
