--- a/forum.html
+++ b/forum.html
@@ -101,7 +101,10 @@
         // ajouterMessage("Votre message ici");
 
         // Exemple de test, vous pouvez supprimer ou modifier ceci pour ajouter un message manuellement
-        ajouterMessage("");
-    </script>
+        ajouterMessage("The syndicate, a shadowy empire that thrives in the deepest corners of society, operates under a veil of  and manipulation. Their influence is built on fear, with every move calculated to maintain control over both allies and enemies. Their objectives are not just sinister but chilling in their cruelty—shrouded in secrecy, they weave webs of corruption, power, and death. Each whispered word in their dark chambers is a threat, each deal a pact sealed with blood. Their leaders, faceless and relentless, pull the strings of governments and corporations alike, using violence and deceit as their weapons of choice. The syndicate's true goal is not just to control but to instill a constant, gnawing dread, making their victims feel powerless, lost, and enslaved to their will. No one is safe from their grip—once you enter their world, there is no escape, and the only certainty is the endless darkness that follows.
+
+");
+         ajouterMessage("");
 </body>
 </html>
+
