--- a/forum.html
+++ b/forum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Messages de Mafia</title>
+    <title>Messages de Syndicate</title>
     <style>
         body {
             background: radial-gradient(circle, #220000, #000);
@@ -79,7 +79,7 @@
             newMessageDiv.textContent = nouveauMessage;
 
             // Ajouter le message en haut du tableau
-            messageTableau.insertBefore(newMessageDiv, messageTableau.children[1]);
+            messageTableau.insertBefore(newMessageDiv, messageTableau.firstChild);
 
             // Faire en sorte que le message précédent perde l'effet de surbrillance
             const messages = messageTableau.getElementsByClassName('message');
@@ -96,15 +96,8 @@
         }
 
         // Exemple d'ajout de messages depuis le code
-        // Vous devez ajouter vos propres messages directement dans le code HTML
-        // Par exemple, pour ajouter un nouveau message, utilisez la fonction suivante :
-        // ajouterMessage("Votre message ici");
-
-        // Exemple de test, vous pouvez supprimer ou modifier ceci pour ajouter un message manuellement
-        ajouterMessage("The syndicate, a shadowy empire that thrives in the deepest corners of society, operates under a veil of  and manipulation. Their influence is built on fear, with every move calculated to maintain control over both allies and enemies. Their objectives are not just sinister but chilling in their cruelty—shrouded in secrecy, they weave webs of corruption, power, and death. Each whispered word in their dark chambers is a threat, each deal a pact sealed with blood. Their leaders, faceless and relentless, pull the strings of governments and corporations alike, using violence and deceit as their weapons of choice. The syndicate's true goal is not just to control but to instill a constant, gnawing dread, making their victims feel powerless, lost, and enslaved to their will. No one is safe from their grip—once you enter their world, there is no escape, and the only certainty is the endless darkness that follows.
-
-");
-         ajouterMessage("");
+        ajouterMessage("The syndicate, a shadowy empire that thrives in the deepest corners of society, operates under a veil of terror and manipulation. Their influence is built on fear, with every move calculated to maintain control over both allies and enemies. Their objectives are not just sinister but chilling in their cruelty—shrouded in secrecy, they weave webs of corruption, power, and death. Each whispered word in their dark chambers is a threat, each deal a pact sealed with blood. Their leaders, faceless and relentless, pull the strings of governments and corporations alike, using violence and deceit as their weapons of choice. The syndicate's true goal is not just to control but to instill a constant, gnawing dread, making their victims feel powerless, lost, and enslaved to their will. No one is safe from their grip—once you enter their world, there is no escape, and the only certainty is the endless darkness that follows.");
+    </script>
 </body>
 </html>
 
