--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
     </nav>
 
     <main>
-        <h1>Bienvenue dans le monde de l'horreur 👀</h1>
-        <p>Vous avez osé entrer sur cette page ? Préparez-vous à une expérience terrifiante et inoubliable... 🕯️💀</p>
-        <button>Entrer... si vous osez ⚰️</button>
+        <h1>Welcome to the world of horror 👀</h1>
+        <p>Did you dare to enter this page? Prepare yourself for a terrifying and unforgettable experience... 🕯️💀</p>
+        <button>l'orrore della mafia e la sua bellezza 💀</button>
     </main>
 
     <script>
