--- a/horreur2.html
+++ b/horreur2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Horrible</title>
+    <title>Horrible Page</title>
     <style>
         body {
-            background-color: #222;
-            color: #ff0000;
+            background-color: #0A0A0A;
+            color: #B22222; /* Dark Red */
             font-family: 'Courier New', monospace;
             margin: 0;
             padding: 0;
@@ -15,33 +15,42 @@
 
         h1, h2, h3 {
             text-align: center;
-            font-size: 3em;
+            font-size: 2em; /* Smaller font size */
             text-transform: uppercase;
-            color: #00ff00;
-            text-shadow: 3px 3px 10px black;
+            color: #8B0000; /* Dark Red */
+            text-shadow: 3px 3px 15px black;
+            margin: 20px;
         }
 
         p {
-            font-size: 1.5em;
+            font-size: 1.2em; /* Smaller font size */
             text-align: justify;
             margin: 20px;
-            color: #ffff00;
-            text-shadow: 2px 2px 5px #ff0000;
+            color: #FF6347; /* Bright Red */
+            text-shadow: 2px 2px 8px #8B0000;
         }
 
         .strange-border {
-            border: 5px dashed #ff00ff;
-            padding: 20px;
-            margin: 20px;
-            background-color: #333;
-            color: #ffffff;
+            border: 4px solid #8B0000; /* Dark Red */
+            padding: 30px;
+            margin: 20px auto;
+            width: 80%;
+            background-color: #2C2C2C; /* Dark Gray for contrast */
+            color: #FFFFFF;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+            border-radius: 20px; /* Rounded corners */
+            transition: box-shadow 0.3s ease-in-out;
+        }
+
+        .strange-border:hover {
+            box-shadow: 0 0 40px rgba(255, 99, 71, 0.7); /* Lighter Red Hover Effect */
         }
 
         .horrible-button {
             display: block;
             margin: 20px auto;
             padding: 15px 30px;
-            background-color: #ff4500;
+            background-color: #B22222; /* Dark Red */
             color: white;
             font-size: 1.2em;
             text-transform: uppercase;
@@ -52,7 +61,7 @@
         }
 
         .horrible-button:hover {
-            background-color: #ff6347;
+            background-color: #FF0000; /* Intense Red */
             transform: scale(1.1);
         }
 
@@ -60,13 +69,13 @@
             display: block;
             margin: 50px auto;
             width: 80%;
-            border: 5px solid #ff0000;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            border: 5px solid #8B0000;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
         }
 
         /* Extra horrible page decorations */
         .page-wrapper {
-            background-image: url('https://www.example.com/your-image.jpg'); /* Remplacez avec votre propre image d'arrière-plan */
+            background-image: url('https://www.example.com/your-image.jpg'); /* Replace with your own background image */
             background-size: cover;
             background-position: center;
             min-height: 100vh;
@@ -77,68 +86,68 @@
             position: absolute;
             top: 10%;
             left: 10%;
-            color: #ffffff;
+            color: #FFFFFF;
             font-size: 2em;
             font-weight: bold;
-            text-shadow: 2px 2px 5px #ff0000;
+            text-shadow: 2px 2px 5px #FF0000;
             animation: crazyAnimation 5s infinite;
         }
 
         @keyframes crazyAnimation {
             0% {
                 transform: rotate(0deg);
-                color: #ff0000;
+                color: #FF6347;
             }
             50% {
                 transform: rotate(360deg);
-                color: #00ff00;
+                color: #8B0000;
             }
             100% {
                 transform: rotate(720deg);
-                color: #0000ff;
+                color: #FF0000;
             }
         }
     </style>
 </head>
 <body>
     <div class="page-wrapper">
-        <h1>Bienvenue dans l'horreur absolue</h1>
-        <div class="splash">Bienvenue sur une page terrifiante et cauchemardesque</div>
+        <h1>Welcome to Absolute Horror</h1>
+        <div class="splash">Welcome to a terrifying and nightmarish page</div>
 
         <div class="strange-border">
-            <h2>Premiére idée du site:</h2>
+            <h2>First idea of the site:</h2>
             <p>
-                Ici commence l'horreur sans fin. La peur vous saisit au moment où vous plongez vos yeux dans les abysses de ce texte.
-                Un monde où les couleurs s'entrechoquent et où l'obscurité règne. Ajoutez vos mots effrayants ici pour créer une atmosphère encore plus terrifiante.
-                Dans ce site vous pouvez partager tout ce que vous voulez! Notre objective est de partager et de développer notre idées et notre pensées avec agressivité et violence nous respectons sauf nos groupe privé.
+                Here begins the endless horror. Fear grips you the moment you set your eyes into the abyss of this text.
+                A world where colors clash and darkness reigns. Add your frightening words here to create an even more terrifying atmosphere.
+                On this site, you can share whatever you want! Our goal is to share and develop our ideas and thoughts with aggression and violence, respecting only our private group.
             </p>
         </div>
 
         <div class="strange-border">
-            <h2>Deuxième idée du site:</h2>
+            <h2>Second idea of the site:</h2>
             <p>
-                Le vent souffle froidement à travers la pièce vide. Les murs se resserrent. Vous avez l'impression d'être observé.
-                Insérez vos pensées les plus sombres ici. Le texte devient de plus en plus perturbant à chaque mot.Nous partageront ensemble L'absurdité et la cruauté des êtres humains qui ne respectent pas les autres et nous irons ensemble partager la résultat de leur crauté.
+                The wind blows coldly through the empty room. The walls tighten. You feel like you're being watched.
+                Insert your darkest thoughts here. The text becomes increasingly disturbing with each word. We will share together the absurdity and cruelty of humans who do not respect others, and we will go together to share the results of their cruelty.
             </p>
         </div>
         <div class="strange-border">
-            <h2>troisiéme idée du site:</h2>
+            <h2>Third idea of the site:</h2>
             <p>
-                Seulement les videos et les images des personnes tuées avec des manniéres trés sauvage existe dans notre site les femmes qui voient eux memes comme les rois de la vie vont etre rapées et violées et turtorées vilolemment  dans notre site! 
+                Only videos and images of people killed in very savage ways exist on our site. Women who see themselves as the queens of life will be raped, tortured, and violently destroyed on our site.
             </p>
         </div>
         <div class="strange-border">
-            <h2>Quatriéme idée du site:</h2>
+            <h2>Fourth idea of the site:</h2>
             <p>
-                DE n"importe qu elle age vous pouvez entrer et explorer notre site voir la réalité des etres vivants et juste merci de respecter la vie des autres et accepter la différence!
+                No matter your age, you can enter and explore our site to see the reality of living beings. Just please respect others' lives and accept differences!
             </p>
         </div>
         <div class="strange-border">
-            <h2>Image Horrible</h2>
+            <h2>Horrible Image</h2>
             <img src="https://ew.com/thmb/ZeKuow-18mHlX3y16xTQcWKYOQI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/horror-movies-31-2000-70d4c0d1f1984dc69d7ac63872b88936.jpg" alt="Horrible Image" class="image">
         </div>
 
-        <a href="https://example.com/another-page" class="horrible-button">Cliquez ici pour plus d'horreur</a>
+        <a href="https://example.com/another-page" class="horrible-button">Click here for more horror</a>
     </div>
 </body>
 </html>
