--- a/set.html
+++ b/set.html
@@ -112,7 +112,7 @@
 
             <p>Click the link below to explore the latest posts and updates by our Admin, Fehrer:</p>
 
-            <a href="https://external.xx.fbcdn.net/emg1/v/t13/9007142903299949834?url=https%3A%2F%2Ffiles.mastodon.social%2Fsite_uploads%2Ffiles%2F000%2F000%2F001%2F%401x%2F57c12f441d083cde.png&fb_obo=1&utld=mastodon.social&stp=c0.5000x0.5000f_dst-emg0_p480x251_q75_tt6&ccb=13-1&oh=06_Q3998IgRn1i4_htAyt1zKAur-sKDhXt5yVXRk4zlonsQLNs&oe=67458739&_nc_sid=c24604" class="cta-link" target="_blank">Visit Admin's Posts and Updates</a>
+            <a href="https://mastodon.social/start?fbclid=IwY2xjawGwfXdleHRuA2FlbQIxMAABHRBQtaiD-qFcySRC4TWm7RzGeYodzAL1GJenL6jfBMMnQ_sI6o-HtdMS-A_aem_y1gvuVXqJrroFcGohaT8fA">Visit Admin's Posts and Updates</a>
         </div>
     </main>
 
