--- a/forum.html
+++ b/forum.html
@@ -101,6 +101,7 @@
         // Exemple d'ajout de messages avec texte long (message découpé)
         ajouterMessage("The syndicate, a shadowy empire that thrives in the deepest corners of society, operates under a veil of secrecy and manipulation. Their influence is built on fear, with every move calculated to maintain control over both allies and enemies. \nTheir objectives are not just sinister but chilling in their cruelty—shrouded in secrecy, they weave webs of corruption, power, and death. Each whispered word in their dark chambers is a threat, each deal a pact sealed with blood. \nTheir leaders, faceless and relentless, pull the strings of governments and corporations alike, using violence and deceit as their weapons of choice.");
         ajouterMessage("Each whispered word in their dark chambers is a threat, each deal a pact sealed with blood. Their leaders, faceless and relentless, pull the strings of governments and corporations alike.");
+        ajouterMessage("La mafia ritorna, portando con sé nuovi orrori. Il Führer oscuro avanza di nuovo nelle ombre, diffondendo la peur e la corruzione.");
     </script>
 </body>
 </html>
