--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
         <a href="horreur2.html">Page Maudite 1 🕸️</a>
         <a href="horreur3.html">Stories ☠️</a>
         <a href="forum.html">Forum ☠️</a> 
+        <a href="darknet.html">darknet ☠️</a> 
     </nav>
 
     <main>
