--- a/darknet.html
+++ b/darknet.html
@@ -3,123 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacker Interface - Black Market</title>
+    <title>Mafia Dark Web</title>
     <style>
-        /* Global styling */
+        /* Background style - Darker tone */
         body {
-            background-color: #010101;
-            color: #0f0; /* Neon green text for hacker look */
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 18px;
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
-            text-shadow: 0px 0px 5px #ff0000, 0px 0px 10px #ff0000, 0px 0px 15px #ff0000;
+            background: #121212; /* Very dark background */
+            font-family: 'Courier New', Courier, monospace;
+            color: #ff3333; /* Red text */
+            text-shadow: 2px 2px 4px black;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
         }
 
-        /* Sliding animation for page */
-        @keyframes slideIn {
-            0% { transform: translateX(-100%); }
-            100% { transform: translateX(0); }
+        /* Main title */
+        .dangerous-title {
+            font-size: 3rem;
+            color: #ff0000;
+            text-transform: uppercase;
+            text-align: center;
+            position: relative;
+            margin: 20px 0;
         }
 
-        /* Apply sliding effect to the main content */
-        .main-content {
-            animation: slideIn 1s ease-out forwards;
-            margin: 0;
+        /* Dangerous writings */
+        .dangerous-writing {
+            font-size: 1.5rem;
+            color: #ff0000;
+            text-align: center;
+            margin: 10px auto;
+            animation: flicker 1.5s infinite alternate;
+        }
+
+        @keyframes flicker {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.4; }
+        }
+
+        /* Content */
+        .content {
+            text-align: center;
             padding: 20px;
-            height: 100vh; /* Full viewport height */
-            overflow-y: auto; /* Allow scrolling */
+            color: #e5e5e5; /* Light gray text for readability */
         }
 
-        h1 {
+        .content p {
+            font-size: 1.2rem;
+            line-height: 1.8;
+        }
+
+        /* Slide-in menu */
+        .slide-menu {
+            position: fixed;
+            top: 0;
+            left: -300px;
+            width: 300px;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            border-right: 2px solid #ff0000;
+            color: white;
+            overflow-y: auto;
+            transition: left 0.3s ease-in-out;
+            z-index: 1000;
+            padding: 20px;
+            box-shadow: 2px 0 10px rgba(255, 0, 0, 0.7);
+        }
+
+        .slide-menu h2 {
             text-align: center;
             color: #ff3333;
-            text-transform: uppercase;
-            font-size: 36px;
-            margin: 40px 0;
-            text-shadow: 2px 2px 5px #ff0000;
-        }
-
-        .container {
-            width: 100%;
-            padding: 20px;
-            box-sizing: border-box;
-            background: #111;
-            border: 1px solid #333;
-            border-radius: 10px;
             margin-bottom: 20px;
-            box-shadow: 0 0 15px #ff0000;
-            animation: slideIn 2s ease-out forwards;
         }
 
-        .item {
-            padding: 15px;
-            background: #222;
+        .slide-menu a {
+            display: block;
             margin: 10px 0;
-            border: 1px dashed #ff3333;
-            box-shadow: 0 0 10px #ff3333;
-        }
-
-        .item h2 {
-            color: #ff6666;
-            font-size: 22px;
-        }
-
-        .item p {
-            color: #ff9999;
-        }
-
-        a {
-            color: #ff0000;
+            padding: 10px;
+            color: #ff3333;
             text-decoration: none;
-        }
-
-        a:hover {
-            color: #ffffff;
-            text-decoration: underline;
-        }
-
-        .footer {
-            position: fixed;
-            bottom: 10px;
-            width: 100%;
+            border: 1px solid #ff3333;
+            border-radius: 5px;
             text-align: center;
-            color: #ff0000;
-            font-size: 14px;
-            animation: slideIn 3s ease-out forwards;
+            transition: background 0.3s, color 0.3s;
+        }
+
+        .slide-menu a:hover {
+            background: #ff3333;
+            color: black;
+        }
+
+        /* Open menu button */
+        .menu-button {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: #ff3333;
+            color: black;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .menu-button:hover {
+            background: black;
+            color: #ff3333;
+        }
+
+        /* Blood handprint effect */
+        .blood-handprint {
+            position: fixed;
+            bottom: 20px;
+            left: 10px;
+            width: 100px;
+            height: auto;
+            opacity: 0.7;
+        }
+
+        /* Slide menu open state */
+        body.menu-open .slide-menu {
+            left: 0;
+        }
+
+        body.menu-open .menu-button {
+            left: 320px;
         }
     </style>
 </head>
 <body>
-    <div class="main-content">
-        <h1>Welcome to the Dark Web</h1>
+    <!-- Open Menu Button -->
+    <button class="menu-button" onclick="toggleMenu()">☰ Open Menu</button>
 
-        <div class="container">
-            <div class="item">
-                <h2>Item 1: Stolen Data</h2>
-                <p>Description: Personal data of 10,000 users.</p>
-                <p>Price: $500</p>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="item">
-                <h2>Item 2: Fake IDs</h2>
-                <p>Description: High-quality fake identification cards.</p>
-                <p>Price: $300 each</p>
-                <a href="#">Buy Now</a>
-            </div>
-            <div class="item">
-                <h2>Item 3: Hacking Tools</h2>
-                <p>Description: Advanced software for penetration testing.</p>
-                <p>Price: $1,000</p>
-                <a href="#">Buy Now</a>
-            </div>
-            <!-- Add more items if needed -->
-        </div>
+    <!-- Slide-in Menu -->
+    <div class="slide-menu">
+        <h2>Secret Links</h2>
+        <a href="#">Black Market</a>
+        <a href="#">Underground Deals</a>
+        <a href="#">Secret Messages</a>
+        <a href="#">Fill Your Links Here</a>
     </div>
 
-    <div class="footer">
-        <p>&copy; 2024 Dark Web Market. All rights reserved.</p>
+    <!-- Main Dangerous Title -->
+    <h1 class="dangerous-title">Welcome to the Mafia Network</h1>
+
+    <!-- Dangerous Writings -->
+    <div class="dangerous-writing">
+        <p>"The shadows will find you, no matter where you hide."</p>
+        <p>"Blood pays for blood. Power demands sacrifice."</p>
+        <p>"This is not a safe place. Turn back, if you value your life."</p>
     </div>
+
+    <!-- Content Section -->
+    <div class="content">
+        <p>
+            This is a place where shadows rule, and every decision has a cost.<br>
+            <b>Blood, Power, and Fear</b> are the only currencies that matter here.
+        </p>
+        <p>
+            Only the brave (or foolish) enter this domain.<br>
+            <b>Your identity is your risk.</b>
+        </p>
+    </div>
+
+    <!-- Blood Handprint -->
+    <img src="https://i.imgur.com/vlzFrlc.png" alt="Blood Handprint" class="blood-handprint">
+
+    <script>
+        // Toggle menu visibility
+        function toggleMenu() {
+            document.body.classList.toggle('menu-open');
+        }
+    </script>
 </body>
 </html>
