--- a/darknet.html
+++ b/darknet.html
@@ -139,7 +139,7 @@
     <!-- Slide-in Menu -->
     <div class="slide-menu">
         <h2>Secret Links</h2>
-        <a href="#">Black Market</a>
+        <a href="b.html">Black Market</a>
         <a href="#">Underground Deals</a>
         <a href="#">Secret Messages</a>
         <a href="#">Fill Your Links Here</a>
