--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         <a href="horreur3.html">Stories ☠️</a>
         <a href="forum.html">Forum ☠️</a> 
         <a href="darknet.html">darknet ☠️</a> 
+        <a href="video.html>watch scumbags die 🕸️</a>
     </nav>
 
     <main>
