--- a/c.html
+++ b/c.html
@@ -98,7 +98,8 @@
     document.querySelectorAll(".encrypted").forEach((element) => {
       element.addEventListener("click", (e) => {
         e.preventDefault();
-        alert("Access to this link is denied.");
+        // Alerte anonyme
+        alert("Access denied by an anonymous administrator.");
       });
     });
   </script>
