--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
         <a href="forum.html">Forum ☠️</a> 
         <a href="darknet.html">darknet ☠️</a> 
         <a href="video.html">watch scumbags die</a>
+        <a href="reel.html">ٌreels(The word of horror)🕸️</a>
     </nav>
 
     <main>
