--- a/horreur2.html
+++ b/horreur2.html
@@ -1,153 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horrible Page</title>
-    <style>
-        body {
-            background-color: #0A0A0A;
-            color: #B22222; /* Dark Red */
-            font-family: 'Courier New', monospace;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1, h2, h3 {
-            text-align: center;
-            font-size: 2em; /* Smaller font size */
-            text-transform: uppercase;
-            color: #8B0000; /* Dark Red */
-            text-shadow: 3px 3px 15px black;
-            margin: 20px;
-        }
-
-        p {
-            font-size: 1.2em; /* Smaller font size */
-            text-align: justify;
-            margin: 20px;
-            color: #FF6347; /* Bright Red */
-            text-shadow: 2px 2px 8px #8B0000;
-        }
-
-        .strange-border {
-            border: 4px solid #8B0000; /* Dark Red */
-            padding: 30px;
-            margin: 20px auto;
-            width: 80%;
-            background-color: #2C2C2C; /* Dark Gray for contrast */
-            color: #FFFFFF;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-            border-radius: 20px; /* Rounded corners */
-            transition: box-shadow 0.3s ease-in-out;
-        }
-
-        .strange-border:hover {
-            box-shadow: 0 0 40px rgba(255, 99, 71, 0.7); /* Lighter Red Hover Effect */
-        }
-
-        .horrible-button {
-            display: block;
-            margin: 20px auto;
-            padding: 15px 30px;
-            background-color: #B22222; /* Dark Red */
-            color: white;
-            font-size: 1.2em;
-            text-transform: uppercase;
-            border: 2px solid #000;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        .horrible-button:hover {
-            background-color: #FF0000; /* Intense Red */
-            transform: scale(1.1);
-        }
-
-        .image {
-            display: block;
-            margin: 50px auto;
-            width: 80%;
-            border: 5px solid #8B0000;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-        }
-
-        /* Extra horrible page decorations */
-        .page-wrapper {
-            background-image: url('https://www.example.com/your-image.jpg'); /* Replace with your own background image */
-            background-size: cover;
-            background-position: center;
-            min-height: 100vh;
-            position: relative;
-        }
-
-        .splash {
-            position: absolute;
-            top: 10%;
-            left: 10%;
-            color: #FFFFFF;
-            font-size: 2em;
-            font-weight: bold;
-            text-shadow: 2px 2px 5px #FF0000;
-            animation: crazyAnimation 5s infinite;
-        }
-
-        @keyframes crazyAnimation {
-            0% {
-                transform: rotate(0deg);
-                color: #FF6347;
-            }
-            50% {
-                transform: rotate(360deg);
-                color: #8B0000;
-            }
-            100% {
-                transform: rotate(720deg);
-                color: #FF0000;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Access Our Group</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #1a1a1a;
+      color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
+    .container {
+      max-width: 600px;
+      padding: 20px;
+      background: #2c2c2c;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+    }
+    h1 {
+      color: #ff4c4c;
+    }
+    p {
+      line-height: 1.6;
+    }
+    .rules {
+      text-align: left;
+      margin: 20px 0;
+    }
+    .rules li {
+      margin-bottom: 15px;
+    }
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #ff4c4c;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    a:hover {
+      background: #ff1a1a;
+    }
+  </style>
 </head>
 <body>
-    <div class="page-wrapper">
-        <h1>Welcome to Absolute Horror</h1>
-        <div class="splash">Welcome to a terrifying and nightmarish page</div>
-
-        <div class="strange-border">
-            <h2>First idea of the site:</h2>
-            <p>
-                Here begins the endless horror. Fear grips you the moment you set your eyes into the abyss of this text.
-                A world where colors clash and darkness reigns. Add your frightening words here to create an even more terrifying atmosphere.
-                On this site, you can share whatever you want! Our goal is to share and develop our ideas and thoughts with aggression and violence, respecting only our private group.
-            </p>
-        </div>
-
-        <div class="strange-border">
-            <h2>Second idea of the site:</h2>
-            <p>
-                The wind blows coldly through the empty room. The walls tighten. You feel like you're being watched.
-                Insert your darkest thoughts here. The text becomes increasingly disturbing with each word. We will share together the absurdity and cruelty of humans who do not respect others, and we will go together to share the results of their cruelty.
-            </p>
-        </div>
-        <div class="strange-border">
-            <h2>Third idea of the site:</h2>
-            <p>
-                Only videos and images of people killed in very savage ways exist on our site. Women who see themselves as the queens of life will be raped, tortured, and violently destroyed on our site.
-            </p>
-        </div>
-        <div class="strange-border">
-            <h2>Fourth idea of the site:</h2>
-            <p>
-                No matter your age, you can enter and explore our site to see the reality of living beings. Just please respect others' lives and accept differences!
-            </p>
-        </div>
-        <div class="strange-border">
-            <h2>Horrible Image</h2>
-            <img src="https://ew.com/thmb/ZeKuow-18mHlX3y16xTQcWKYOQI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/horror-movies-31-2000-70d4c0d1f1984dc69d7ac63872b88936.jpg" alt="Horrible Image" class="image">
-        </div>
-
-        
-    </div>
+  <div class="container">
+    <h1>Welcome to Our Group</h1>
+    <p>
+      Before accessing our group, please carefully read and accept the rules below. These rules are 
+      designed to protect your privacy and ensure a safe environment for all members.
+    </p>
+    <ul class="rules">
+      <li><strong>1. Age Requirement:</strong> You must be 18 years or older to join this group. No exceptions.</li>
+      <li><strong>2. Use a VPN:</strong> Always use a reliable VPN to protect yourself from potential scams and maintain your privacy.</li>
+      <li><strong>3. Confidentiality:</strong> Respect the confidentiality of the group. Sharing private information without consent is prohibited.</li>
+      <li><strong>4. Respect Other Members:</strong> Harassment, hate speech, or abusive behavior will result in an immediate ban.</li>
+      <li><strong>5. Prohibited Content:</strong> Sharing illegal or explicit content is strictly forbidden and will lead to severe consequences.</li>
+      <li><strong>6. Reporting Issues:</strong> Report any suspicious activities or rule violations to the group administrators immediately.</li>
+      <li><strong>7. No Advertising:</strong> Unauthorized advertisements or promotions are not allowed in the group.</li>
+      <li><strong>8. Follow Local Laws:</strong> Ensure that you comply with your country's laws when participating in discussions or activities.</li>
+      <li><strong>9. Important rules</strong>:This site contains psychopaths and mentally ill people, which means that you will find the dark side of this damned world. You will find everything as you do not want it. This site is not for joking, so if you are not of the limited age or you came for fun, you should leave immediately. In fact, its maker is unknown and all Nothing is unknown, so protecting your privacy is the most important thing for us.</li> 
+    </ul>
+    <p>
+      By clicking the button below, you agree to follow these rules and understand that violations 
+      may result in removal from the group.
+    </p>
+    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Ft.me%2F%2BaRFqTpX5w8Jhmzl0%3Ffbclid%3DIwZXh0bgNhZW0CMTAAAR1ED08GULKyd_WwZJJOsJszKt36ly0Y6WGTaXz0JAdFNwtX-a7R3aWZzAA_aem_8bOS3Nshna0Wap8e1wGcsg&h=AT07l-y4UabiCU_CRe_PFwcqyzVgyq78Kwq5FstBCi5_mClVKJCNE9wXJIqrRfDIsUSV5XWkal_8sPZDV8K-nz1LV1vqU-ZkYUSkibtypXGB3uMKt6722nJLefhChJiw61aV-w" target="_blank">
+      I Accept the Rules
+    </a>
+  </div>
 </body>
 </html>
