--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         <a href="darknet.html">darknet ☠️</a> 
         <a href="video.html">watch scumbags die</a>
         <a href="reel.html">ٌreels(The word of horror)🕸️</a>
+        <a href="d.html">paid links 👻</a>
     </nav>
 
     <main>
