--- a/set.html
+++ b/set.html
@@ -130,6 +130,54 @@
             text-decoration: underline;
             font-weight: bold;
         }
+
+        /* Modal Under Maintenance */
+        #maintenanceModal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #ff4444;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 1s ease-in-out;
+        }
+
+        #maintenanceModal.active {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        #maintenanceModal .message {
+            background-color: #111;
+            padding: 30px;
+            text-align: center;
+            border-radius: 10px;
+            border: 3px solid #660000;
+            box-shadow: 0px 0px 20px #330000 inset, 0px 0px 40px #ff0000;
+            font-size: 2em;
+            color: #ff0000;
+            text-shadow: 0 0 15px #ff0000;
+            animation: flickerMessage 1.5s infinite;
+        }
+
+        @keyframes flickerMessage {
+            0%, 100% {
+                color: #ff0000;
+                text-shadow: 0 0 10px #ff0000, 0 0 20px #660000;
+            }
+            50% {
+                color: #660000;
+                text-shadow: 0 0 30px #ff4444, 0 0 40px #ff0000;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -150,6 +198,18 @@
             <a class="cta-link" href="https://mastodon.social/start?fbclid=IwY2xjawGwfXdleHRuA2FlbQIxMAABHRBQtaiD-qFcySRC4TWm7RzGeYodzAL1GJenL6jfBMMnQ_sI6o-HtdMS-A_aem_y1gvuVXqJrroFcGohaT8fA">Visit Admin's Posts and Updates</a>
         </div>
     </main>
+
+    <!-- Modal Under Maintenance -->
+    <div id="maintenanceModal">
+        <div class="message">Under Maintenance... Horrible Surprise Coming Soon!</div>
+    </div>
+
+    <script>
+        // Show the maintenance modal when the page loads
+        window.onload = function() {
+            document.getElementById('maintenanceModal').classList.add('active');
+        };
+    </script>
 
 </body>
 </html>
